# agentic-table-playground

./: .gitignore  README.md  README_zh.md  env.example  pyproject.toml
.streamlit/: secrets_backup.toml
backend/: __init__.py
backend/data_processing/table_operation/: generate_tools_description.py  table_operation_core.py  table_operation_models.py  table_operation_workflow.py  table_operations.py
data/config/: collections_config.json
data/datasets/: Table-Operation-Tools-and-Examples.csv  Tools_Description.csv
frontend/: app.py  ui_components.py
scripts/: import_data_to_milvus.py
utils/: env_loader.py  llm_tools.py  vector_db_utils.py
